--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,7 +5,7 @@
   margin-bottom: 80px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 769px) {
   .place {
     margin-bottom: 73px;
   }
